objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Discount__c</fullName>
        <formula>IF(HasRevenueSchedule, NULL, (ListPrice-UnitPrice) / ListPrice)</formula>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>TEXT(PricebookEntry.Product2.Family)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Image__c</fullName>
        <formula>PricebookEntry.Product2.Product_Image__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Image</label>
        <type>Text</type>
    </fields>
</CustomObject>